[package]
name = "rust-in-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = "4.2.4"
env_logger = "0.10.0"
failure = "0.1.8"
log = "0.4.17"
rand = "0.8.5"
rust-crypto = "0.2.36"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
sled = "0.34.7"
